--- a/ServerClient/Server/Server.csproj
+++ b/ServerClient/Server/Server.csproj
@@ -20,7 +20,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Messages\Messages.csproj" />
+      <ProjectReference Include="..\Network\Network.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Extensions\" />
     </ItemGroup>
 
 </Project>
